--- a/404.html
+++ b/404.html
@@ -43,23 +43,20 @@
   <div class="container d-flex align-items-center">
 
     <div class="logo mr-auto">
-      <!-- Uncomment below if you prefer to use a text logo -->
-      <!--<h1 class="text-light"><a href="index.jsp"><span>Vesperr</span></a></h1>-->
-
-      <a href="index.jsp"><img src="tile-wide.png" alt="" class="img-fluid"></a>
+      <a href="index.html"><img src="tile-wide.png" alt="" class="img-fluid"></a>
     </div>
 
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li><a href="index.jsp#hero">Home</a></li>
-        <li><a href="index.jsp#about">About</a></li>
-        <li><a href="index.jsp#services">Services</a></li>
-        <li><a href="index.jsp#pricing">Pricing</a></li>
+        <li><a href="index.html#hero">Home</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#services">Services</a></li>
+        <li><a href="index.html#pricing">Pricing</a></li>
 
-        <!--<li><a href="login.jsp">Login</a></li>
-        <li><a class="active" href="signup.jsp">Signup</a></li>-->
+        <!--<li><a href="login.html">Login</a></li>
+        <li><a class="active" href="signup.html">Signup</a></li>-->
 
-        <li class="get-started"><a href="index.jsp#contact">Contact</a></li>
+        <li class="get-started"><a href="index.html#contact">Contact</a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -74,7 +71,7 @@
 
       <div class="d-flex justify-content-between align-items-center">
         <ol>
-          <li><a href="index.jsp">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li>404</li>
         </ol>
       </div>
@@ -110,8 +107,6 @@
   </div>
   <a href="https://api.whatsapp.com/send?phone=+916283441889" target="_blank" class="chat-icon"><i class="icofont-whatsapp"></i></a>
 </footer><!-- /Footer -->
-
-<!--<a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>-->
 
 <!-- Vendor JS Files -->
 <script src="vendor/jquery/jquery.min.js"></script>
