--- a/404.html
+++ b/404.html
@@ -99,8 +99,8 @@
       </div>
       <div class="col-lg-6">
         <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Use</a>
+          <a href="privacypolicy.html">Privacy Policy</a>
+          <a href="termsofuse.html">Terms of Use</a>
         </nav>
       </div>
     </div>
