updated whatsapp phone link in index.html

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ We assist you with the latest advancements and strategies to attract more traffi
 <!-- /Footer -->
 
 <!--<a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>-->
-<a href="https://api.whatsapp.com/send?phone=+916283441889" target="_blank" class="chat-icon"><i
+<a href="https://wa.me/916283441889" target="_blank" class="chat-icon"><i
         class="icofont-whatsapp"></i></a>
 
 <!-- Vendor -->
