updated whatsapp link in 404.html

--- a/404.html
+++ b/404.html
@@ -105,7 +105,7 @@
       </div>
     </div>
   </div>
-  <a href="https://api.whatsapp.com/send?phone=+916283441889" target="_blank" class="chat-icon"><i class="icofont-whatsapp"></i></a>
+  <a href="https://wa.me/916283441889" target="_blank" class="chat-icon"><i class="icofont-whatsapp"></i></a>
 </footer><!-- /Footer -->
 
 <!-- Vendor JS Files -->
