commented out pricing section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li class="active"><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#pricing">Pricing</a></li>
+                <!-- <li><a href="#pricing">Pricing</a></li> -->
                 <li class="get-started"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -371,7 +371,7 @@ We assist you with the latest advancements and strategies to attract more traffi
         </div>
     </section>
 
-    <!-- Pricing -->
+    <!-- Pricing 
     <section id="pricing" class="pricing">
         <div class="container">
 
@@ -673,7 +673,7 @@ We assist you with the latest advancements and strategies to attract more traffi
 
         </div>
     </section>
-    <!-- /Pricing -->
+     /Pricing -->
 
     <!-- F.A.Q -->
     
