updated hero section heading

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-                <h1 data-aos="fade-up">Take your business to the next level with The Well India.
+                <h1 data-aos="fade-up">Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                 </h1>
                 <h2 data-aos="fade-up" data-aos-delay="400">Let's grow together!
                 </h2>
