updated the footer logo message

--- a/index.html
+++ b/index.html
@@ -748,8 +748,7 @@ We assist you with the latest advancements and strategies to attract more traffi
                         <div class="logo mr-auto">
                             <a href="#"><img src="img/921x323.png" alt="" class="img-fluid" style="max-height: 40px;"></a>
                         </div>
-                        <p>The Well India has been offering software solutions for enterprises
-                            and customers in multiple target industries across the US, Canada & India.</p>
+                        <p>The Well India drives growth with tailored online and offline marketing solutions, empowering enterprises and customers across industries in the US, Canada, and India.</p>
                         
                         <div class="social-links">
                             
