--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ We assist you with the latest advancements and strategies to attract more traffi
         <div class="container">
 
             <div class="section-title" data-aos="fade-up">
-                <h2>Contact Us</h2>
+                <h2>Let’s Make It Happen!</h2>
             </div>
 
             <div class="row">
