updated services section details

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@ We assist you with the latest advancements and strategies to attract more traffi
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                         <div class="icon"><i class="bx bxs-file-blank"></i></div>
-                        <h4 class="title"><a href="">Website Development
+                        <h4 class="title"><a href="">Integrated Marketing Solutions
                         </a></h4>
-                        <p class="description">Stability, responsiveness, and premium designs are our trademarks.
+                        <p class="description">SEO, PPC, Social Media, Email Campaigns, Event Promotions, Print Media and Outdoor Advertising
                         </p>
                     </div>
                 </div>
@@ -208,9 +208,11 @@ We assist you with the latest advancements and strategies to attract more traffi
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                         <div class="icon"><i class="bx bxs-mobile"></i></div>
-                        <h4 class="title"><a href="">Mobile App Development
+                        <h4 class="title"><a href="">Creative Design Services
                         </a></h4>
-                        <p class="description">Simple, fast, and highly secure applications are our key focus.
+                        <p class="description">Graphic Design (Logos, Brochures, Packaging)
+                        </p>
+                        <p class="description">Web and App Design (User-Friendly and Responsive Interfaces)
                         </p>
                     </div>
                 </div>
@@ -218,9 +220,11 @@ We assist you with the latest advancements and strategies to attract more traffi
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                         <div class="icon"><i class="bx bxs-palette"></i></div>
-                        <h4 class="title"><a href="">Digital Marketing
+                        <h4 class="title"><a href="">Strategic Campaign Management
                         </a></h4>
-                        <p class="description">Go digital! bring more traffic and generate amazing brand loyalty.
+                        <p class="description">End-to-End Campaign Planning and Execution
+                        </p>
+                        <p class="description">Data-Driven Performance Tracking and Optimization
                         </p>
                     </div>
                 </div>
@@ -228,9 +232,11 @@ We assist you with the latest advancements and strategies to attract more traffi
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
                         <div class="icon"><i class="bx bx-world"></i></div>
-                        <h4 class="title"><a href="">Web & Graphics Design
+                        <h4 class="title"><a href="">Comprehensive Branding Solutions
                         </a></h4>
-                        <p class="description">We offer a very precise, beautiful design with just the right balance.
+                        <p class="description">Brand Identity Development
+                        </p>
+                        <p class="description">Messaging, Storytelling, and Positioning Strategies
                         </p>
                     </div>
                 </div>
