--- a/index.html
+++ b/index.html
@@ -74,14 +74,18 @@
                 <h2 data-aos="fade-up" data-aos-delay="400">Let's grow together!
                 </h2>
                 <div class="row">
+                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="800">
+                        <a href="#pricing" class="btn-get-started text-center scrollto" style="width: 210px;">Request a
+                            quote</a>
+                    </div> 
                     <!-- <div class="col-md-6" data-aos="fade-up" data-aos-delay="800">
                         <a href="#pricing" class="btn-get-started text-center scrollto" style="width: 210px;">See our
                             plans</a>
-                    </div> -->
+                    </div> 
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="800" style="margin-left: -10%">
                         <a href="#contact" class="btn-get-started text-center scrollto" style="width: 210px;">Request a
                             quote</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
