--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </h2>
                 <div class="row">
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="800">
-                        <a href="#pricing" class="btn-get-started text-center scrollto" style="width: 210px;">Request a
+                        <a href="#contact" class="btn-get-started text-center scrollto" style="width: 210px;">Request a
                             quote</a>
                     </div> 
                     <!-- <div class="col-md-6" data-aos="fade-up" data-aos-delay="800">
