updated about section description

--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@
             <div class="row content">
                 <div class="col-lg pt-4 pt-lg-0 text-center" data-aos="fade-up" data-aos-delay="300">
                     <p class="text-left">
-                        Welcome on board to the very own firm The Well India; we help you establish and promote your business to new heights. Where most companies just build you a website and call it day, we work our fingers to the bone for you, so that, you reach the extra mile.
+                        Welcome aboard to The Well India – where your growth is our mission. We go beyond just creating a website; we’re dedicated to helping you establish and promote your business, both online and offline, to achieve remarkable success. With our expertise in innovative marketing strategies, we ensure your brand stands out, drives organic traffic, and boosts sales.
 
-Our goal is to prioritize our customers along with adding value to your work. We toil in an aesthetically organizational manner with an established website, alongside, driving more organic traffic which thus increases sales.
+Our goal is to add value to your business by working tirelessly to deliver impactful campaigns and creative solutions. From building a strong online presence to leveraging offline channels, we ensure you reach your audience effectively. At The Well India, we don’t just work for you – we work with you, going the extra mile to ensure your success. Because when you thrive, so do we!
 
-We assist you with the latest advancements and strategies to attract more traffic and increases the number of sales. Our major concern is to help you succeed. Therefore, we go the extra mile to help you reach your goal. Because your success is the reason we do what we do!
-
+Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                     </p>
                     <!--<a href="#" class="btn-learn-more">Learn More</a>-->
                 </div>
