commented out website optimization block from services section

--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                     </div>
                 </div>
                 
-                <div class="col-lg-3 col-md-4 mt-4">
+                <!-- <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="bx bx-network-chart"
                            style="color: #b2904f"></i>
                         <h3><a href="javascript:void(0)">Website Optimization
                         </a></h3>
                     </div>
-                </div>
+                </div> -->
                 
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
