renamed a service block to website design

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                     <div class="icon-box">
                         <i class="bx bx-intersect"
                            style="color: #b20969"></i>
-                        <h3><a href="javascript:void(0)">Website Design & Development
+                        <h3><a href="javascript:void(0)">Website Design
                         </a></h3>
                     </div>
                 </div>
