updated faq section details

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
         <div class="container">
 
             <div class="section-title" data-aos="fade-up">
-                <h2>Services we provide</h2>
+                <h2>Seamless Solutions, Built with You in Mind</h2>
                 <p>Complete end to end solutions.</p>
             </div>
 
@@ -687,12 +687,12 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
             <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-5">
                     <i class="ri-question-line"></i>
-                    <h4>Marketing Can you help me with Online Marketing?
+                    <h4>What types of businesses do you work with?
                     </h4>
                 </div>
                 <div class="col-lg-7">
                     <p>
-                        100% Yes! Our main goal is to help you succeed online. We are in for the long haul, our team is committed to your success and we offer many online marking packages including, Local SEO, National SEO & World Wide SEO
+                        We work with businesses of all sizes across various industries, offering tailored marketing solutions to meet their specific needs. Whether you're a startup or an established enterprise, we’re here to help you grow.
                     </p>
                 </div>
             </div>
@@ -701,12 +701,12 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
             <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-5">
                     <i class="ri-question-line"></i>
-                    <h4>How much does a website cost? How much for a website?
+                    <h4>How do you ensure success in both online and offline marketing?
                     </h4>
                 </div>
                 <div class="col-lg-7">
                     <p>
-                        We have nothing to hide as we know our prices are fair and affordable when comparing apples to apples, with that being said the best way to see how much your website will cost is to talk to us.
+                        We combine innovative strategies, data-driven insights, and creative execution to maximize your reach. From digital campaigns to offline promotions, we focus on driving meaningful engagement and delivering measurable results.
                     </p>
                 </div>
             </div>
@@ -715,12 +715,12 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
             <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-5">
                     <i class="ri-question-line"></i>
-                    <h4>Are your Websites Custom?
+                    <h4>What does “going the extra mile” mean for your clients?
                     </h4>
                 </div>
                 <div class="col-lg-7">
                     <p>
-                        Yes, everything we build is 100% Custom made with unlimited revisions to the design. We are custom starting from the design all the way to your administration area to manage the website yourself.
+                        It means personalized attention, consistent support, and a commitment to your success. We don’t stop at delivering campaigns; we analyze results, optimize strategies, and provide ongoing guidance to help your business thrive.
                     </p>
                 </div>
             </div>
