--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                             <a href="https://www.facebook.com/thewellindiamarketing/"><i
                                     class="icofont-facebook"></i></a>
                             
-                            <a href="https://www.instagram.com/thewellindia_marketing/?hl=en/"><i
+                            <a href="https://www.instagram.com/thewellindia/"><i
                                     class="icofont-instagram"></i></a>
                             
                             <a href="https://www.linkedin.com/company/68707583/admin/"><i
