--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                             <div class="col-md-6 d-md-flex align-items-md-stretch">
                                 <div class="count-box">
                                     <i class="icofont-simple-smile"></i>
-                                    <span data-toggle="counter-up">90</span><span>+</span>
+                                    <span data-toggle="counter-up">90</span>
                                     <p><strong>Happy Clients</strong>
                                     </p>
                                 </div>
@@ -152,7 +152,7 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                             <div class="col-md-6 d-md-flex align-items-md-stretch">
                                 <div class="count-box">
                                     <i class="icofont-document-folder"></i>
-                                    <span data-toggle="counter-up">100</span><span>+</span>
+                                    <span data-toggle="counter-up">100</span>
                                     <p><strong>Projects</strong>
                                     </p>
                                 </div>
@@ -161,7 +161,7 @@ Your Growth, Our Mission – Online and Offline Marketing That Delivers.
                             <div class="col-md-6 d-md-flex align-items-md-stretch">
                                 <div class="count-box">
                                     <i class="icofont-clock-time"></i>
-                                    <span data-toggle="counter-up">5</span><span>+</span>
+                                    <span data-toggle="counter-up">5</span>
                                     <p><strong>Years of experience</strong>
                                     </p>
                                 </div>
